fix spacing

--- a/assets/scss/_general.scss
+++ b/assets/scss/_general.scss
@@ -43,7 +43,7 @@
         .title{
             font-family: $font-title;
             margin-bottom: 12vh;
-            margin-top: 10vh;
+            margin-top: 14vh;
             font-weight: 400;
 
             @media(max-width: 992px){
